test/Fail/Issue2402-2.err
Issue2402-2.agda:10.1-15: error: [CoverageIssue]
Incomplete pattern matching for Issue2402-2.with-56. Missing cases:
  test2 false | w
when checking the definition of Issue2402-2.with-56

Issue2402-2.agda:10.18-19: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue2402-2.agda:10.18-19
